<resources>
    <string name="app_name">Cosplay Compendium</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="register_button_text">Register</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="forgot_password_button_text">Forgot Password?</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">Register</string>
    <string name="terms_privacy_agreement"><![CDATA[I agree to the <a href=\'http://www.jamessimshaw.com/cc_tou.html\'>Terms of Use</a> and the <a href=\'http://www.jamessimshaw.com/cc_privacy.html\'>Privacy Policy</a>]]></string>
    <string name="convention_logo">Convention Logo</string>
    <string name="name">Name</string>
    <string name="change_logo">Change logo...</string>
    <string name="description">Description</string>
    <string name="end">End:</string>
    <string name="sample_date">Thursday Oct. 15 2015</string>
    <string name="location">Location</string>
    <string name="sample_start_date">Thursday Oct. 15 2015</string>
    <string name="start">Start:</string>
    <string name="sample_start_time">11:45PM</string>
    <string name="series">Series</string>
    <string name="conventions">Conventions</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="feedback_and_suggestions">Feedback and Suggestions</string>
    <string name="event_name">Event Name</string>
</resources>
