<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="wrap_content">


        <EditText
            android:id="@+id/conventionNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:maxLines="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/convention_logo"
            android:src="@android:drawable/ic_dialog_alert"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/conventionNameEditText"/>

        <!--
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/conventionLogoChangeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:text="@string/change_logo"
            app:layout_constraintLeft_toRightOf="@id/logoImageView"
            app:layout_constraintTop_toBottomOf="@id/conventionNameEditText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.23"/>
        -->
        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoImageView"/>


    </android.support.constraint.ConstraintLayout>
</ScrollView>